--- a/style.css
+++ b/style.css
@@ -174,8 +174,11 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
+  border-radius: 50%;
 }
-
+#profile-pic{
+  border-radius: 50%;
+}
 .section__text {
   align-self: center;
   text-align: center;
